Modify for use on *nix systems